# rpi_usb_sound_card

./: CMakeLists.txt  README.md
common/inc/: ring_buf.h  volume_ctrl.h
common/inc/i2s/: machine_i2s.h
common/inc/pdm/: pdm_microphone.bck.h  pdm_microphone.h
common/inc/ws2812/: ws2812.h
common/src/: ring_buf.c  volume_ctrl.c
common/src/i2s/: machine_i2s.c  ring_buf.c
common/src/pdm/: pdm_microphone.c
common/src/ssd1306/: ssd1306.c
common/src/ws2812/: ws2812.c
hello_microphone_pdm/: CMakeLists.txt  main.c
mono_microphone_pdm/: CMakeLists.txt
mono_microphone_pdm/inc/: board_defines.h  common_types.h  main.h  microphone_settings.h  pdm_board_defines.h  tusb_config.h  usb_descriptors.h
mono_microphone_pdm/src/: main.c  usb_descriptors.c  usb_microphone.c
stereo_microphone/: CMakeLists.txt
stereo_microphone/inc/: common_types.h  i2c_board_defines.h  i2s_board_defines.h  main.h  microphone_settings.h  tusb_config.h  usb_descriptors.h  usb_microphone.h
stereo_microphone/src/: main.c  usb_descriptors.c  usb_microphone.c
stereo_microphone_i2s/: CMakeLists.txt  README.md
stereo_microphone_i2s/inc/: board_defines.h  main.h  microphone_settings.h  tusb_config.h  usb_descriptors.h
stereo_microphone_i2s/src/: main.c  usb_descriptors.c  usb_microphone.c
stereo_microphone_pdm/: CMakeLists.txt  README.md
stereo_microphone_pdm/inc/: board_defines.h  common_types.h  main.h  microphone_settings.h  pdm_board_defines.h  tusb_config.h  usb_descriptors.h  usb_microphone.h
stereo_microphone_pdm/src/: main.c  usb_descriptors.c  usb_microphone.c
stereo_speaker/: CMakeLists.txt  README.md
stereo_speaker/inc/: board_defines.h  common_types.h  i2c_board_defines.h  i2s_board_defines.h  key_cmd_ring_buffer.h  main.h  speaker_settings.h  tusb_config.h  usb_descriptors.h  usb_hid_custom_ctrl_descriptor.h  usb_speaker.h
stereo_speaker/src/: key_cmd_ring_buffer.c  main.c  usb_descriptors.c  usb_speaker.c
